--- a/V2NodeJs/package.json
+++ b/V2NodeJs/package.json
@@ -9,7 +9,8 @@
   "author": "Peter Knobloch",
   "license": "ISC",
   "dependencies": {
-    "commander": "^2.19.0"
+    "commander": "^2.19.0",
+    "tmp": "0.0.33"
   },
   "devDependencies": {
     "jest": "^24.5.0"
